# njorda_demo_sakra

./: .gitignore  CLAUDE.md  FRONTEND_GUIDE.md  README.md  docker-compose.server.yml  docker-compose.yml  generate_test_pdfs.py  tasks.py
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 26e2510e92fd_add_messages_table.py  2a2c38306c0e_add_file_data_bytea_column_to_documents.py  41d30082a33e_add_audit_events_table.py  43d18bb7912d_add_session_tokens_table.py  455ee9575e25_add_role_to_users.py  73e752491203_add_clients_table.py  98b1bb4625d6_add_advisors_table_and_advisor_id_to_.py  a1b2c3d4e5f6_add_app_settings_table.py  b2c3d4e5f6a7_add_compliance_tables.py  c4d5e6f7a8b9_add_compliance_rule_audit_table.py  dafe589d8065_add_documents_and_extractions_tables.py  dc39e7dc70f9_add_reply_to_message_id_to_messages.py  e7a1b2c3d4f5_add_compliance_report_runs.py  f4f40984e3f2_add_users_table.py
backend/src/: audit.py  auth.py  config.py  database.py  main.py  seed.py  seed_test_documents.py
backend/src/ai/: __init__.py  anthropic_chat.py  base.py  prompt.py  session.py  tools.py
backend/src/compliance/: audit.py  engine.py  field_resolver.py  models.py  rule_types.py  seed.py
backend/src/data/: mock.py
backend/src/extraction/: __init__.py  base.py  cli.py  gemini_extractor.py  llm_extractor.py  models.py  pdf_reader.py  prompt.py  scan_new.py
backend/src/models/: __init__.py  advisor.py  client.py  (+8 more)
backend/tests/: test_compliance_api.py  test_engine.py  test_field_resolver.py  test_rule_types.py
(+103 files in other folders)
