[project]
name = "njorda-advisor-backend"
version = "0.1.0"
description = "Njorda Advisor Demo Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "bcrypt>=4.0.0",
    "anthropic>=0.42.0",
    "pymupdf>=1.25.0",
    "google-genai>=1.0.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.1",
    "pytest>=8.0.0",
]
